[package]
name = "client-tauri"
version = "0.1.0"
description = "VLan Gaming - 虚拟局域网游戏联机工具"
authors = ["you"]
edition = "2021"

[lib]
name = "client_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
client-core = { path = "../../client-core" }
protocol = { path = "../../protocol" }
tokio = { version = "1", features = ["full"] }
wintun = "0.5"
